[package]
name = "pfhe"
version = "0.0.1"
edition = "2021"
description = "P-adic Fully Homomorphic Encryption"
license-file = "LICENSE"
homepage = "https://github.com/p-adic-fhe/pfhe"
repository = "https://github.com/p-adic-fhe/pfhe"
readme = "README.md"

[dependencies]
crypto-bigint = { version = "0.5.3", features = ["rand"] }
impl_ops = "0.1.1"
