[package]
name = "pfhe"
version = "0.0.1"
edition = "2021"
description = "P-adic Fully Homomorphic Encryption"
license-file = "LICENSE"
homepage = "https://github.com/p-adic-fhe/pfhe"
repository = "https://github.com/p-adic-fhe/pfhe"
readme = "README.md"

[dependencies]
crypto-bigint = { version = "0.5.3", features = ["rand"] }
crypto-primes = "0.5.0"
num-bigint-dig = {version ="^0.7", features = ["prime", "rand"]}
rand = "0.8.4"
lazy_static = {version = "*"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "default"
harness = false
